[tool.poetry]
name = "conversioncontainer"
version = "0.1.0"
description = "This container runs in cloud run and handles conversion requests and submission publication events"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
google-cloud-storage = "^2.9.0"
gunicorn = "^20.1.0"
sqlalchemy = "==2.0.19"
Flask-SQLAlchemy = "^3.0.4"
pytz = "^2023.3"
pg8000 = "^1.29.8"
google-cloud-logging = "^3.5.0"
bs4 = "^0.0.1"
filelock = "^3.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
