[tool.poetry]
name = "conversion"
version = "1.1.0"
description = "This container runs in cloud run and handles conversion requests and submission publication events"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "69c6ddc2d7271c9239cabd76b250c7ec9ced2d75"}
gunicorn = "^20.1.0"
bs4 = "^0.0.1"
filelock = "^3.12.2"
requests = "^2.31.0"
tenacity = "*"
sqlalchemy = "~=2.0.27"
mypy = "*"
mysqlclient = "==2.1.*"
pg8000 = "^1.30.1"

[tool.poetry.dev-dependencies]
pytest-mock = "*"

[tool.pytest.ini_options]
markers = [
    "cc_unit_tests: Unit tests for concurrency control functions",
    "processing_unit_tests: Unit tests for processing functions"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
